examples/syntax-error/syntax-error.py
a = 50

if a > 0:
    print("The number is positive"
elif a < 0:
    print("The number is negative")
else: 
    print("The number is zero")

